--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # We want to generate our own bundle not use any pre-existing bundles
 bundle.js
 bundle.js.map
-node_modules
+/config/keys.js
+/node_modules
 
 # Ignore master key for decrypting credentials and more.
 master.key
