--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ bundle.js
 bundle.js.map
 /config/keys.js
 /node_modules
+/keys_dev
 
 # Ignore master key for decrypting credentials and more.
 master.key
