--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "validator": "^13.0.0",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "node": "12.16.x"
   }
 }
