--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mern-project",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.16.x"
+  },
   "main": "app.js",
   "scripts": {
     "server:debug": "nodemon --inspect app.js",
@@ -26,7 +29,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "validator": "^13.0.0",
-    "webpack": "^4.43.0",
-    "node": "12.16.x"
+    "webpack": "^4.43.0"
   }
 }
